--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: julia
 julia:
   - release
   - nightly
-
+script:
+  - if [ $JULIAVERSION = "julianightlies" ]; then julia --code-coverage test/runtests.jl; fi
+  - if [ $JULIAVERSION = "juliareleases" ]; then julia test/runtests.jl; fi
 after_success:
 - julia -e 'cd(Pkg.dir("QuantileRegression")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
