--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: julia
 julia:
   - release
   - nightly
-
+  - julia --check-bounds=yes -e 'Pkg.clone(pwd()); Pkg.build("QuantileRegression"); Pkg.test("QuantileRegression"; coverage=true)'
 after_success:
 - julia -e 'cd(Pkg.dir("QuantileRegression")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
