--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,14 @@
 language: julia
+os:
+  - osx
+  - linux
 julia:
-- release
-script:
-- julia --check-bounds=yes -e 'Pkg.clone(pwd()); Pkg.build("QuantileRegression"); Pkg.test("QuantileRegression"; coverage=true)'
+  - 0.6
+notifications:
+  email: false
+#script: # the default script is equivalent to the following
+#  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
+#  - julia -e 'Pkg.clone(pwd()); Pkg.build("Example"); Pkg.test("Example"; coverage=true)';
 after_success:
-- julia -e 'cd(Pkg.dir("QuantileRegression")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
+  - julia -e 'cd(Pkg.dir("QuantileRegression")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())';
+#  - julia -e 'cd(Pkg.dir("Example")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())';
