--- a/Project.toml
+++ b/Project.toml
@@ -10,7 +10,7 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 StatsModels = "3eaba693-59b7-5ba5-a881-562e759f1c8d"
 
 [compat]
-DataFrames = "0.18, 0.19, 0.20, 0.21, 0.22"
+DataFrames = "0.18, 0.19, 0.20, 0.21, 0.22, 1.0"
 Distributions = "0.20, 0.21, 0.22, 0.23, 0.24"
 StatsBase = "0.30, 0.31, 0.32, 0.33"
 StatsModels = "0.6"
