--- a/Project.toml
+++ b/Project.toml
@@ -13,7 +13,7 @@ StatsModels = "3eaba693-59b7-5ba5-a881-562e759f1c8d"
 DataFrames = "0.18, 0.19, 0.20, 0.21, 0.22, 1.0"
 Distributions = "0.20, 0.21, 0.22, 0.23, 0.24, 0.25"
 StatsBase = "0.30, 0.31, 0.32, 0.33"
-StatsModels = "0.6"
+StatsModels = "0.6, 0.7"
 julia = "1.3"
 
 [extras]
